--- a/the_blogger_helper/server/main.css
+++ b/the_blogger_helper/server/main.css
@@ -199,7 +199,7 @@
 .article-thumbnail-wrap:after {
     pointer-events: none;
     content: "";
-    height: 250px;
+    height: 100%;
     -o-object-fit: cover;
     object-fit: cover;
     width: 100%;
